# AsphericityQt

./: CMakeLists.txt  MainWindow.cxx  MainWindow.h  README.md  main.cxx
